kubernetes/apps/n8n/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  namespace: n8n
  labels:
    app: n8n
    app.kubernetes.io/name: n8n
    app.kubernetes.io/part-of: n8n
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - n8n.felipemalacarne.com.br
      secretName: n8n-tls
  rules:
    - host: n8n.felipemalacarne.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 80
